style: update Header and menu styles for improved layout and responsiveness - moved burger menu div to the correct position in Header component - adjusted padding in menu styles for better visual alignment - modified burger button position to fixed and increased z-index for better accessibility - refined font weight and opacity settings for improved text visibility

--- a/src/styles/scss/_menu.scss
+++ b/src/styles/scss/_menu.scss
@@ -88,7 +88,7 @@
     z-index: 9992;
     height: 100vh;
     width: 100%;
-    padding: 20vh 2rem 0 2rem;
+    padding: 15vh 2rem 0 2rem;
 
     background-color: var(--color-blue); 
     transform: translateX(0%);
@@ -107,6 +107,7 @@
       right: 16px;
       width: 60px;
       height: 60px;
+      display: none;
 
       @media (min-width: 780px) {
         display: none;
@@ -143,15 +144,16 @@
             display: block;
             padding: .5rem 0;
 
+            font-family: $main-font-title;
+            font-size: clamp(40px, 15vw, 48px);
+            font-weight: 900;
+            line-height: 1;
+            text-transform: uppercase;
             text-decoration: none;
             letter-spacing: -.015rem;
             color: #FFFFFF;
-            transition-duration: 1s;
 
-            font-family: $main-font-title;
-            font-size: clamp(40px, 6vw, 48px);
-            font-weight: 900;
-            line-height: 1;
+            transition-duration: 1s;
           }
         }
       }
@@ -176,6 +178,7 @@
         line-height: 1.35;
         letter-spacing: -0.01em;
         color: $color-white;
+        opacity: .5;
       }
       a {
         color: $color-white;
@@ -183,7 +186,7 @@
         transition: 0.35s;
 
         font-size: 1.5rem;
-        font-weight: 700;
+        font-weight: 400;
 
         &:hover {
           color: #000;
@@ -211,11 +214,12 @@
 }
 
 .burger {
-  position: absolute;
+  position: fixed;
   top: 1rem;
   right: 1rem;
   width: 60px;
   height: 60px;
+  z-index: 9999;
 
   @media (min-width: 780px) {
     display: none;
